k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: text-classification
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: myapp
        image: text-classification:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "512Mi"     
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: text-classification
spec:
  selector:
    app: backend
  ports:
  - port: 8000
